# flux

./: .gitignore
backend/:  .gitignore  .dockerignore  Dockerfile  pyproject.toml
backend/dev/: Dockerfile
backend/migrations/models/: 0_20240927143101_init.py  0_20241001175557_init.py  1_20241007131021_add_profile_model.py  2_20241007183535_chat models added.py  3_20241017163614_update.py
backend/requirements/: base.txt  new.txt
backend/src/: config.py  database.py  exceptions.py  main.py  models.py
backend/src/chat/: models.py  router.py  schemas.py  ws_router.py
backend/src/posts/: config.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/users/: models.py  router.py  schemas.py  service.py
backend/tests/: test_posts.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/dev/: Dockerfile
frontend/src/: constants.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/components/: CreatePost.tsx  EditProfile.tsx  EditProfileModal.tsx  LoadingSpinner.tsx  PostCard.tsx  ProfileHeader.tsx  SideNav.tsx  SideNavv.tsx
frontend/src/components/chat/: ChannelList.tsx  ChatRoom.tsx  CreateChannelForm.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/ui/: Card.tsx
frontend/src/providers/: AuthProvider.tsx
frontend/src/utils/: api.ts  apiClient.ts  authApi.ts  chatApi.ts  postsApi.ts  usersApi.ts
(+8 files in other folders)
